--- a/src/Config-users/config.users.css
+++ b/src/Config-users/config.users.css
@@ -228,3 +228,11 @@
 }
 
 /* Style sessions */
+
+/* BRD-CONFIG | Media queries */
+
+@media (max-width: 768px) {
+    .config-current-session {
+        width: 100%;
+    }
+}
